# admat

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  justfile
.github/workflows/: ci.yml  cmake-multi-platform.yml
benchmarks/: CMakeLists.txt
benchmarks/src/: matrix.cpp  vector.cpp
cmake/: compile-options.cmake  dependencies.cmake  install-config.cmake  install-rules.cmake  options.cmake
include/admat/: admat.hpp  export.hpp  mat.hpp  matrix.hpp  operations.hpp  vec.hpp  vector.hpp
include/admat/mat/: arithmetic.hpp  mat.hpp  operations.hpp  projections.hpp  transform.hpp
include/admat/matrix/: manipulation.hpp  operations.hpp  transform.hpp  types.hpp
include/admat/vec/: arithmetic.hpp  operations.hpp  transform.hpp  vec.hpp
include/admat/vector/: operations.hpp  transform.hpp  types.hpp
src/: admat.cpp
src/mat/: mat.cpp  operations.cpp  projections.cpp
src/matrix/: operations.cpp
src/vec/: operations.cpp  vec.cpp
tests/: CMakeLists.txt
tests/src/: admat_test.cpp  matrix_tests.cpp  operations_tests.cpp  utils.hpp  vector_tests.cpp
